December 2013 4.4
  - allow to set a custom label for each account type
  - LAM Pro:
   -> Samba/Shadow: display password change date in self service


25.09.2013 4.3
  - Custom SSL CA certificates can be setup in LAM main configuration
  - Unix user and group support for Samba 4
  - Samba 3 groups: support local members
  - Kolab: support group accounts and allowed senders/receivers for users
  - SSH public key: support file upload and self service enhancements (RFE 101)
  - DHCP: support more options (RFE 99)
  - LAM Pro:
   -> PPolicy: check password history for password reuse
   -> Custom fields: read-only fields for admin interface and file upload for binary data
   -> Custom scripts: support user self registration
   -> Password self reset: Samba 3 sync, identification with login attribute, Samba 4 support
  - fixed bugs:
   -> Custom fields: auto-adding object classes via profile editor fixed
   -> PHP 5.5 compatibility
   -> Lamdaemon: do not show message if home directory to delete was not found (154)


18.06.2013 4.2.1
  - fixed bugs:
   -> Unix: suggested user name must be lower case
   -> Quota: profile editor does not work in some cases


04.06.2013 4.2
  - Samba 4 support: users, groups, hosts
  - Unix: allow to change format for suggested user name
  - LAM Pro:
   -> Zarafa support for Samba 4
   -> allow to hide buttons to create/delete entries for each account type
   -> Password self reset: support new identification methods: user, email, user or email, employee number
   -> Custom fields: support PDF, profiles and multi-value text fields
   -> Personal: support password mail sending in file upload


19.03.2013 4.1
  - Updated EDU person module (RFE 3599128)
  - Personal: allow management of user certificates (RFE 1753030)
  - Unix: Support Samba Unix Id pool for automatic UID/GID generation
  - DHCP: support separated dhcpServer and dhcpService entries
  - LAM Pro:
   -> Support Qmail groups
  - Fixed bugs: